# freepad

./: .gitignore  CMakeLists.txt  app.overlay  freepad_n52840.overlay  hid-ble.md  prj.conf  tips.md
boards/arm/freepad_n52840/: freepad_n52840.dts
boards/arm/freepad_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  freepad_nrf52840-pinctrl.dtsi  freepad_nrf52840.dts  freepad_nrf52840.yaml  freepad_nrf52840_defconfig
circuit/: freepad.kicad_prl  freepad.kicad_pro  freepad.kicad_sch
src/: button.c  button.h  clib_config.h  func_button.c  func_button.h  iwdg.c  iwdg.h  main.c  systime.h  usb_agent.c  usb_agent.h  usb_hid.c  usb_hid.h
src/ble/: ble_agent.c  ble_agent.h  cbas.c  cdis.c  ds4_hid_desc.h  hog.c  hog.h  xos_hid_desc.h  xos_service.c
